# aed-proj2-2021

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
dataset/lines/: line_A_0.csv  line_A_1.csv  line_B_0.csv  line_B_1.csv  line_C_0.csv  line_C_1.csv  line_D_0.csv  line_D_1.csv  line_E_0.csv  line_E_1.csv  line_F_0.csv  line_F_1.csv
dataset/lines-stops/: stops-metro.csv  stops.csv
includes/: Menu.h  Reader.h  Stop.h  Trip.h  Utils.h  constants.h  filters.h  graph.h  minHeap.h
src/: Menu.cpp  Reader.cpp  Stop.cpp  Trip.cpp  Utils.cpp  filters.cpp  graph.cpp  main.cpp
